# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my-check.yml
gendiff/: generate_diff.py  generator.py  parser.py
gendiff/formatters/: __init__.py  choice_formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_generator.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py  test_utils.py
tests/fixtures/: input_diff.json
